--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^5.28.4",
+    "@web3modal/wagmi": "^4.1.1",
+    "framer-motion": "^11.0.14",
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-no-ssr": "^1.1.0",
+    "viem": "^2.8.10",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "@types/react-no-ssr": "^1.1.7",
+    "prettier": "^3.2.5",
+    "typescript": "^5"
   }
 }
