--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@cowprotocol/cow-sdk": "^5.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.28.4",
     "@web3modal/wagmi": "^4.1.1",
+    "ethers": "5.7.2",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
